# COA_PY_AutonomusCAR

./: AD_RP_serial.ino  AD_RP_serial.py  Arduino.h  CMakeLists.txt  Car.py  Gooty.md  README.md  RPserial.py  RasPi.h  RasPiServer.h  __init__.py  car.py  main.cpp  main.py  sock_serial.py  socketserver.py  testmain.cpp
3Dmodel/:  3Dmodel.md
Android/: Android.md
Android/WirelessController/: settings.gradle
Android/WirelessController/app/: build.gradle
Android/WirelessController/app/src/main/: AndroidManifest.xml
Android/WirelessController/app/src/main/res/drawable/: btn1.xml  (+4 more)
Android/WirelessController/gradle/wrapper/: gradle-wrapper.properties
HW_controller/: AD_RP_serial.py  MPU9250.py  __init__.py  camera.py  recording.py  socketclient.py  socketserver.py
HW_controller/AD_RP_serial/: AD_RP_serial.ino
HW_controller/client_cpp/: cpp_socket_client.cpp
SampleCode/: AD_RP_serial.py  sock_serial.py  socketserver.py
SampleCode/AD_RP_serial/: AD_RP_serial.ino
SampleCode/client/: local.properties  settings.gradle
SampleCode/client/app/: build.gradle
SampleCode/client/app/src/main/: AndroidManifest.xml
SampleCode/client/app/src/main/res/: dd.txt
SampleCode/client/gradle/wrapper/: gradle-wrapper.properties
Server/: Server.md
Server/server_RPi/: Arduino.h  CMakeLists.txt  SRasPi.h  main.cpp  sock_recv.txt
Server/server_cpp/: Arduino.h  RasPi.h  cpp_socket_server.cpp  main.cpp
Server/server_java/: ServerExCh2.java  ServerExample.java  ServerWithoutFx.java
Server/server_python/: 2Server.py  Car.py  Client.py  Client_test.py  testserver.py
(+26 files in other folders)
